deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kic
  name: kic-feed-service
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc-web
  selector:
    app: kic-feed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kic
  name: kic-feed
spec:
  selector:
    matchLabels:
      app: kic-feed
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: kic
      labels:
        app: kic-feed
    spec:
      containers:
        - image: gcr.io/PROJECT_ID/IMAGE:TAG
          name: kic-feed
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
