deployment/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: kic
  name: feed-virtual-service
spec:
  hosts:
    - "api.keeping-it-casual.com"
  gateways:
    - kic-gateway
  http:
    - match:
        - uri:
            prefix: /kic.feed.Feed
      route:
        - destination:
            host: kic-feed-service
            port:
              number: 50051
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowHeaders:
          - grpc-timeout
          - content-type
          - keep-alive
          - user-agent
          - cache-control
          - content-type
          - content-transfer-encoding
          - custom-header-1
          - x-accept-content-transfer-encoding
          - x-accept-response-streaming
          - x-user-agent
          - x-grpc-web
          - Authorization
          - authorization
        maxAge: 1728s
        exposeHeaders:
          - custom-header-1
          - grpc-status
          - grpc-message
          - Authorization
          - authorization
